--- a/Java Full Stack Practice/.settings/org.eclipse.core.resources.prefs
+++ b/Java Full Stack Practice/.settings/org.eclipse.core.resources.prefs
@@ -1,2 +1,3 @@
 eclipse.preferences.version=1
 encoding//src/lectures/Java_OOPs_Concepts_11/Inheritance_2/RulesOf_Override.java=UTF-8
+encoding//src/lectures/Java_TypesOfVariables_02/StaticModifer.java=UTF-8
